# wonda

./: .env.example  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  README.md  analyze_verbose_paths.py  main.py  pyproject.toml  stats_v1.txt  test.runlim
.github/: CONTRIBUTING.md  SECURITY.md
.github/workflows/: ci.yml
configs/: global_config.py  global_configurations.py
configs/eval/: config.yaml  config_l40s.yaml  config_l40s_test.yaml  config_pm.yaml  eval_config.yaml  old_config.yaml
configs/preprocess/: build_baseline_dataset.yaml  build_eval_dataset.yaml  build_sft_dataset.yaml  build_train_dataset.yaml  build_v1_train_dataset.yaml  cot_distilation.yaml  create_sft_data.yaml  preprocess_gt_invariants.yaml  preprocess_gt_invariants_parallel.yaml  wonda_data_pipeline.yaml
configs/train/: config.yaml  qwen3_0.6b.yaml  qwen3_1.7b.yaml  qwen3_14b.yaml  qwen3_4b.yaml  (+3 more)
data/: README.md
docs/: clean_invariants.md  data_curation_pipeline.md  data_curation_pipeline.tex  interpreting_statistical_results.md  invariant_normalization_icml.tex  normalization_stats_table.tex  preliminaries_notation_summary.md  preprocess_gt_invariants_parallel_pipeline.md  preprocessing_pipeline.md  statistical_evaluation_theory.md  svcomp.md  trials_for_research_paper.md  vbp.md
nbs/: basic_eda.ipynb  create_train_data.ipynb  new_eda.ipynb  pg.ipynb  plots.ipynb  results.ipynb  self_gen.ipynb  sft_demo.ipynb  timeout_recovery_stats.csv  timeout_recovery_stats_by_model.csv  timeout_solved.ipynb  timing_comparison.ipynb  train_eda.ipynb  train_oss.ipynb  train_sft.ipynb
scripts/: analyze_parallel_latest.py  compute_normalization_stats.py  plot_cast_distribution.py  run_evaluation.sh
src/: evaluate.py
tests/: README.md  test_ast_program.py  test_check_equivalence.py  test_clean_invariants.py  test_data_collator.py  test_data_collator_assistant_only.py  test_decision_procedure.py  test_gt_invariant_normalization.py  test_gt_invariants.py  test_join_assertions_comprehensive.py  test_model_quick.py  test_model_response.py  test_multiline_assertion.py  test_program_with_regex.py  test_prune_invariant.py  test_rewrite_and_program.py  test_rewriter.py  test_rewriter_before_after_clang.py  test_rewriter_closing_brace.py  test_semantic_equivalence.py  test_uautomizer_parsing.py  test_uautomizer_timing_determinism.py  test_validate.py  test_validate_complex.py  test_validate_model_answer.py  test_z3.py
(+3965 files in other folders)
