[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wonda"
version = "0.1.0"
description = "LLM-based loop invariant generation for accelerating program verification"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
authors = [{name = "Ido Pinto"}]
keywords = ["loop invariants", "program verification", "LLM", "fine-tuning", "formal methods"]

dependencies = [
    "datasets>=4.3.0",
    "hydra-core>=1.3.2",
    "huggingface-hub>=0.34.0,<1.0",
    "matplotlib>=3.10.8",
    "numpy",
    "openai>=2.11.0",
    "peft",
    "plotly>=6.5.0",
    "pycparser>=2.23",
    "python-dotenv>=1.2.1",
    "pyyaml",
    "requests",
    "scipy",
    "together>=1.5.33",
    "torch",
    "transformers",
    "trl",
    "tqdm>=4.67.1",
    "unsloth",
    "vllm>=0.12.0",
    "wandb>=0.23.1",
    "weave>=0.52.22",
    "z3-solver>=4.15.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ipykernel>=7.1.0",
]

[project.urls]
Repository = "https://github.com/idopinto/wonda"
